--- a/003.html
+++ b/003.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4500002025092618359</div></li>
+                    <div class="detail-value " id="reqNo">A4400002025111918359</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">广西壮族自治区，贵州省</div></li>
+				<div class="detail-value " id="passDists">广东省，广西壮族自治区</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年09月28日11时13分至 2025年10月05日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年11月20日11时13分至 2025年11月30日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">广西壮族自治区</span>: 广西百色旺瑶农牧有限责任公司--G324--汪甸收费站--G78汕昆高速--G69银百高速--桂黔界；<br><hr>
-<span id="pro">贵州省</span>:黔桂界--G69银百高速--罗甸南收费站<br><hr></div></li>
+<span id="pro">广东省</span>: 广达汽车维修服务中心--S280--曹江收费站--G65包茂高速--粤桂界；<br><hr>
+<span id="pro">广西壮族自治区</span>:桂粤界--G65包茂高速--水汶收费站--G207--中东石化水汶加油站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -97,7 +97,7 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">钻机1台</div></li>
+                    <div class="detail-value " id="cargoInfo">挖掘机1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -121,7 +121,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">25.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">26.00 × 3.75× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -133,8 +133,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-广西壮族自治区：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
-贵州省：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
+广东省：<br>交通部门意见:同意通行。 <br>公安部门意见:暂无！<br><hr>
+广西壮族自治区：<br>交通部门意见:同意通行。<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
