--- a/011.html
+++ b/011.html
@@ -75,18 +75,21 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A6200002025111603512</div></li>
+                    <div class="detail-value " id="reqNo">A6500002025111545523</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">甘肃省，青海省，新疆维吾尔自治区</div></li>
+				<div class="detail-value " id="passDists">新疆维吾尔自治区,青海省,甘肃省，四川省，重庆市,贵州省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年11月18日22时05分至 2025年11月30日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年11月18日15时29分至 2025年12月14日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">甘肃省</span>:定西交通运输集团有限责任公司--S209--解放路--定西收费站--G30连霍高速--G22青兰高速-G2201兰州南绕城高速(南绕城高速通行的时间:当日00:00时至6:00时)-G6京藏高速(河口至树屏立交段双向通行时间:当日22.00至次日6.00)--甘青界；<br><hr>
-<span id="pro">青海省</span>:青甘界--G6京藏高速--G0612西和高速--G6京藏高速--S2013茶德高速--S20德小高速--饮马峡收费站--S20德小高速--G315--老茫崖收费站-- G0612西和高速--青新界；<br><hr>
-<span id="pro">新疆维吾尔自治区</span>:新青界--G0612西和高速--米兰收费站--G315--南屯收费站--G0612西和高速--尼雅收费站--G3012吐和高速--和田收费站--G580--中国油联加油站<br><hr></div></li>
+<span id="pro">新疆维吾尔自治区</span>:中国油联加油站--G580--和田收费站-G3012吐和高速--尼雅收费站--G0612西和高速--南屯收费站--G315--米兰收费站--G0612西和高速--新青界；<br><hr>
+<span id="pro">青海省</span>:青新界--G0612西和高速--老茫崖收费站--G315--S20德小高速--饮马峡收费站--S20德小高速--S2013茶德高速--G6京藏高速--G0612西和高速--G6京藏高速--青甘界；<br><hr>
+<span id="pro">甘肃省</span>:甘青界--G6京藏高速(河口至树屏立交段双向通行时间:当日22.00至次日6.00)-G2201兰州南绕城高速(南绕城高速通行的时间:当日00:00时至6:00时)--G22青兰高速--G30连霍高速--S14陇渭高速--G75兰海高速--（G75下行线井坪至韩家河段禁止大件运输车辆通行）--甘川界；<br><hr>
+<span id="pro">四川省</span>:川甘界--G75兰海高速--G42沪蓉高速--G5515张南高速--G85银昆高速--S26达阆高速--G65包茂高速--G42沪蓉高速--川渝界；<br><hr>
+<span id="pro">重庆市</span>:渝川界--G42沪蓉高速--太平互通--G50沪渝高速--三店枢纽互通--G5515张南高速--册山枢纽互通--G65包茂高速--秀山东枢纽--S63秀松高速--渝黔界；<br><hr>
+<span id="pro">贵州省</span>:黔渝界--S15松从高速--松桃北收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">赵伟宁</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -135,9 +138,12 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+新疆维吾尔自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 青海省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-新疆维吾尔自治区：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+甘肃省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+四川省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+重庆市：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+贵州省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
